[package]
name = "vyges-layout"
version = "0.0.1"
edition = "2021"
description = "Layout geometry kernel: GDSII read/write, polygon boolean ops, and hierarchy flatten."
license = "Apache-2.0"
authors = ["Vyges <https://vyges.com/contact>"]
homepage = "https://vyges.com"
repository = "https://github.com/vyges-tools/layout"

# The shared geometry crate (itself std-only). Pulled from git like the other
# cross-repo deps in the suite, so any consumer building vyges-layout resolves it.
[dependencies]
vyges-geom = { git = "https://github.com/vyges-tools/geom", branch = "main" }

[[bin]]
name = "vyges-layout"
path = "src/main.rs"

[lib]
name = "vyges_layout"
path = "src/lib.rs"
