[package]
name = "vyges-layout"
version = "0.1.7"
edition = "2021"
description = "Layout geometry kernel: GDSII read/write, polygon boolean ops, and hierarchy flatten."
license = "Apache-2.0"
authors = ["Vyges <https://vyges.com/contact>"]
homepage = "https://vyges.com"
repository = "https://github.com/vyges-tools/layout"

# The shared geometry crate (itself std-only). Pulled from git like the other
# cross-repo deps in the suite, so any consumer building vyges-layout resolves it.
[dependencies]
vyges-geom = { git = "https://github.com/vyges-tools/geom", branch = "main" }
# Pure-Rust DEFLATE (no C, permissive) for OASIS CBLOCK decompression — the default
# compressed form real writers emit. Keeps the "no C toolchain, cross-platform" story.
miniz_oxide = "0.8"

[[bin]]
name = "vyges-layout"
path = "src/main.rs"

[lib]
name = "vyges_layout"
path = "src/lib.rs"
